Revision history for Ftree

{{$NEXT}}

2.3.17  2015-09-09 01:17:23 MSK
           * add install instruction
2.3.16  2015-09-09 01:06:08 MSK
           * corrected an error routing
2.3.15  2015-09-09 00:47:04 MSK
           * Change error with form,  it works, simple!!
2.3.14  2015-09-09 00:04:02 MSK

           * Move distribution to plack
2.3.13  2015-09-07 01:54:27 MSK
           * Put config to file c:\Users\TOSH\Documents\GitHub\Ftree-cpan\cgi-bin\ftree.config 
           * Add Prayer_for_the_living
           * Add Prayer_for_the_departed
		   
2.3.12  2015-09-06 09:15:07 MSK
           * Improve pod

2.3.11  2015-09-06 03:05:27 MSK
           * Initial version

NEW IN VERSION 2.3.11:
* bug fixes
* serializing in platform independent way

NEW IN VERSION 2.3.10:
* bug fixes

NEW IN VERSION 2.3.9:
* language Russian added 

NEW IN VERSION 2.3.8:
* no zoom-out button if there are no more generations
* border color of the image depends on the existence of the member (black for dead relative). See class dead and alive in style sheet
* gender-dependent picture for unknown persons  
* proper UTF-8 and excel encoding (big endian) handling
* bug fixes (e.g. in language switching)
* config file change (see option encoding for csv format)

NEW IN VERSION 2.3.7:
* language Romanian is added
* cleaner code

NEW IN VERSION 2.3.6:
* decoupling style from XHTML output by employing style sheet

NEW IN VERSION 2.3.5:
* bug fixes
* proper error handling (warning occurs during data file parsing are sent to browser as HTML comments)

NEW IN VERSION 2.3.4:
* bug fixes
* little improvements in efficiency

NEW IN VERSION 2.3.3:
* bug fixes
* code refactoring (usage of Class::Std module)
* config file change
* read data from database (not tested yet!)

NEW IN VERSION 2.3.2:
* Italian support

NEW IN VERSION 2.3.1:
* proper date display with custom format option (date_format option in PerlSettingsImporter.pm)
* a bug fix

NEW IN VERSION 2.3:
* handling GEDCOM files