@@ -1,0 +1,10 @@
+REM c:
+REM cd c:\test_app
+REM call c:\test_app\strawberry-perl-5.20.0.1-64bit-portable\portableshell_ftree.bat
+call plackup --host 127.0.0.1 --port 8080
+REM @echo off
+REM "C:\Users\THEUSER\AppData\Local\Google\Chrome\Application\chrome.exe"
+REM sleep1
+rem start "webpage name" "http://someurl.com/"
+rem start chrome.exe http://127.0.0.1:8080/
+REM start "" http://127.0.0.1:8080/
