@@ -11,9 +11,9 @@ date_format   %d/%m/%Y
     </config>
 </data_source>
 css_filename   /css/bodon_default.css
-adminEmail   bodon@cs.bme.hu
+adminEmail   mi@ya.ru
 sitemeter_id   s22bodonangol
 sitemeter_needed   1
-adminHomepage   http://www.cs.bme.hu/~bodon
-adminName   Ferenc Bodon
+adminHomepage   http://mishin.narod.ru
+adminName   Nikolay Mishin
 passwordReq   
